2006-04-24  Christian Perhristian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-04-24  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.15.1 ===

	* configure.ac:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	* src/window-commands.c: (window_cmd_help_about):

	Update for 2.15.1.

	* help/eu/eu.po:
	* help/fi/fi.po:
	* help/ja/ja.po:
	
	Fix the build by adding bogus translator-credits strings.

2006-04-20  Piers Cornwell  <piers@gnome.org>

	* data/glade/prefs-dialog.glade:

	Fix duplicate accesskey. Bug 337912

2006-04-20  Piers Cornwell  <piers@gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:

	Use header capitalisation. Bug #337915

2006-04-19  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/prefs-dialog.glade:
	* src/prefs-dialog.c:

	Fix mnemonic activation of download path button. Bug #339139.

2006-04-17  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Also allow cairo-gtk2 builds.
	Builds but segfaults on startup.

2006-04-17  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/GtkNSSDialogs.cpp:

	Check for nsIMutableArray.h and include it if found. Fixes build with
	gecko trunk.

2006-04-15  Tommi Komulainen  <tommi.komulainen@iki.fi>

	* lib/widgets/ephy-location-entry.c (update_favicon): Replace
	'stock-new' fallback favicon with more semantically correct
	'text-html' It also looks better with Tango icon theme. Bug #337140

2006-04-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c:

	Add -p as short option format for --private-instance.

2006-04-12  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:

	Add Esperanto (eo).

2006-04-11  Crispin Flowerday  <gnome@flowerday.cx>

	* data/ui/epiphany-bookmark-editor-ui.xml:
	* data/ui/epiphany-history-window-ui.xml:
	* data/ui/epiphany-ui.xml:

	Reorder the menu items everywhere to have new tab above 
	new window. Fixes bug #303417

2006-04-10  Paul Drain <pd@cipherfunk.org>
